kubernetes/apollo/apps/flux-system/flux-operator/tailscale/ingress.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-operator-tailscale
  labels:
    tailscale.com/proxy-class: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: flux-operator
      port:
        name: http-web
  tls:
    - hosts:
        - flux-apollo
